// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextualBodyView > renders caption messages with url previews 1`] = `
<div>
  <div
    class="TextualBody-module_root TextualBody-module_caption"
  >
    <div>
      Caption for the uploaded image.
    </div>
    <div
      style="margin-top: 8px; padding: 8px; border-radius: 8px; background-color: var(--cpd-color-bg-subtle-secondary);"
    >
      URL preview
    </div>
  </div>
</div>
`;

exports[`TextualBodyView > renders emote messages with annotations 1`] = `
<div>
  <div
    class="TextualBody-module_root TextualBody-module_emote"
    dir="auto"
  >
    * 
    <span
      class="TextualBody-module_emoteSender"
      role="button"
      tabindex="0"
    >
      Alice
    </span>
     
    <span
      class="TextualBody-module_annotated TextualBody-module_annotatedInline"
      dir="auto"
    >
      <span>
        waves enthusiastically
      </span>
      <button
        class="TextualBody-module_annotation TextualBody-module_editedMarker"
        data-textual-body-edited-marker=""
        type="button"
      >
        <span>
          (edited)
        </span>
      </button>
    </span>
  </div>
</div>
`;

exports[`TextualBodyView > renders the default message body 1`] = `
<div>
  <div
    class="TextualBody-module_root TextualBody-module_text"
  >
    <div>
      Hello, this is a textual message.
    </div>
  </div>
</div>
`;

exports[`TextualBodyView > renders the notice branch 1`] = `
<div>
  <div
    class="TextualBody-module_root TextualBody-module_notice"
  >
    <div>
      This is a notice message.
    </div>
  </div>
</div>
`;
